--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,5 @@
 #about {
-    height: 920px;
+    height: 42.9vw;
 }
 
 #about h3 {
@@ -7,12 +7,18 @@
     color: #0690d7;
     margin-top: 60px;
     text-align: center;
+    display: block;
 }
 
 #about p {
     font-family: "Fira Sans";
+    font-size: 1.125em;
+    width: 70%;
+    margin-left: 15%;
     text-align: center;
-    margin-top: 100px;   
+    margin-top: 100px;
+    line-height: 160%;
+    z-index: 1;
 }
 
 .the_circles {
@@ -65,6 +71,7 @@
     height: 250px;
     background: #0690d7;
     margin-top: -250px;
+    display: block;
 }
 
 
@@ -72,5 +79,7 @@
 @media screen and (max-width: 1198px) {
     .spec {
         visibility: hidden;
+        position: absolute;
+        z-index: 0;
     }
 }
