--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,6 @@
 #about {
-    height: 42.9vw;
+    padding-top: 49px;
+    padding-bottom: 40px;
 }
 
 #about h3 {
@@ -7,7 +8,6 @@
     color: #0690d7;
     margin-top: 60px;
     text-align: center;
-    display: block;
 }
 
 #about p {
@@ -71,7 +71,6 @@
     height: 250px;
     background: #0690d7;
     margin-top: -250px;
-    display: block;
 }
 
 
@@ -81,5 +80,13 @@
         visibility: hidden;
         position: absolute;
         z-index: 0;
+    }
+    .pic {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    background: #0690d7;
+    margin-top: -85px;
+    margin-bottom: -15px;
     }
 }
