--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,29 +1,77 @@
-#portfolio .container-fluid {
-    padding-left: 0px;
-}
-
-.row.no-gutter {
-  margin-right:0;
-  margin-left:0;
-}
-.row.no-gutter > [class*='col-'] {
-  padding-right:0;
-  padding-left:0;
-}
-
 #portfolio {
-    background: #ff005c;
-    margin-top: 50px
+    padding-top: 49px;
+    padding-bottom: 100px;
 }
 
-#twitch {
-    height: 12vw;
-    width: 12vw;
-    background-color: #6441a5;
+#portfolio h3 {
+    font-family: "Fira Sans";
+    color: #0690d7;
+    margin-top: 60px;
+    text-align: center;
 }
 
-#pomo {
-    height: 12vw;
-    width: 12vw;
-    background-color: f32301;
+#portfolio .to {
+    margin-top: 140px;
+}
+
+#portfolio .row .col-xs-2 {
+    padding-top: 3%;
+}
+
+#portfolio img{
+    height: 6vw;
+    width: 6vw;
+}
+
+.info {
+    text-align: center;
+    font-size: 1.5em;
+    font-family: "Fira Sans";
+    color: black;
+    margin-top: 5%;
+}
+
+.text {
+    text-align: center;
+    font-size: 1em;
+    font-family: "Fira Sans";
+    color: black;
+    margin-top: 15px;
+    visibility: hidden;
+}
+
+#twitch:hover .text {
+    visibility: visible;
+}
+
+#pomo:hover .text {
+    visibility: visible;
+}
+
+#wiki:hover .text {
+    visibility: visible;
+}
+
+#simon:hover .text {
+    visibility: visible;
+}
+
+#calculator:hover .text {
+    visibility: visible;
+}
+
+#weather:hover .text {
+    visibility: visible;
+}
+
+@media screen and (max-width: 990px) {
+    .text {
+        font-size: 0.8em;
+    }
+}
+
+@media screen and (max-width: 488px) {
+    .text {
+        font-size: 0.7em;
+    }
 }
