--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -10,8 +10,9 @@
 }
 
 h3 {
-    font-family: "Fira Sans";
-    color: #0690d7;
+    font-family: "Open Sans";
+    font-weight: 700;
+    color: #e1c185;
     margin-top: 60px;
     text-align: center;
 }
