--- a/style/about.css
+++ b/style/about.css
@@ -1,16 +1,21 @@
 #about {
-    padding-top: 49px;
-    padding-bottom: 40px;
+    padding-top: 70px;
+    padding-bottom: 80px;
 }
 
 #about p {
-    font-size: 1.125em;
+    font-size: 1.30em;
     width: 70%;
     margin-left: 15%;
     text-align: center;
     margin-top: 100px;
-    line-height: 160%;
+    line-height: 180%;
     z-index: 1;
+    font-weight: 300;
+}
+
+#about span {
+    font-weight: 900;
 }
 
 .the_circles {
@@ -21,7 +26,7 @@
     border-radius: 50%;
     width: 125px;
     height: 125px;
-    background: #0690d7;
+    background: #e5eaee;
     display: inline-block;
     margin-bottom: 62.5px;
     margin-right: 80px;
@@ -31,7 +36,7 @@
     border-radius: 50%;
     width: 125px;
     height: 125px;
-    background: #0690d7;
+    background: #e5eaee;
     display: inline-block;
     margin-bottom: 62.5px;
     margin-right: 50px;
@@ -41,7 +46,7 @@
     border-radius: 50%;
     width: 125px;
     height: 125px;
-    background: #0690d7;
+    background: #e5eaee;
     display: inline-block;
     float: right;
     margin-right: 100px;
@@ -51,7 +56,7 @@
     border-radius: 50%;
     width: 125px;
     height: 125px;
-    background: #0690d7;
+    background: #e5eaee;
     display: inline-block;
     float: right;
     margin-right: 
@@ -61,13 +66,13 @@
     border-radius: 50%;
     width: 250px;
     height: 250px;
-    background: #0690d7;
+    background: #e5eaee;
     margin-top: -250px;
 }
 
 
 
-@media screen and (max-width: 1198px) {
+@media screen and (max-width: 1199px) {
     .spec {
         visibility: hidden;
         position: absolute;
@@ -77,8 +82,11 @@
     border-radius: 50%;
     width: 200px;
     height: 200px;
-    background: #0690d7;
     margin-top: -85px;
     margin-bottom: -15px;
+    }
+    
+    #about p {
+        font-size: 1.1em;
     }
 }
